Bug 2037517 - List all tabs menu: improved overflow behaviour r=sthompson,desktop-theme-reviewers,tabbrowser-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D308073

UltraBlame original commit: 9abca3bdc2af79844c027c181772afa3893fb827

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -2777,15 +2777,8 @@ toolbar:not(#TabsToolbar) #firefox-view-button {
   }
 }
 
-/* The list of tabs is in its own panel-subview-body which will scroll. We don't
-   want any padding below the scrollbar, so remove the bottom padding
-   from the outer panel-subview-body. */
-#allTabsMenu-allTabsView > .panel-subview-body {
-  padding-bottom: 0;
-}
-
 #allTabsMenu-allTabsView-tabs {
-  padding-top: 0;
+  padding-block: 0;
 }
 
 #allTabsMenu-dropIndicatorHolder {
